# hazsystems

./: .gitignore  .readthedocs.yaml  README.md  manage.py  mkdocs.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  vite.config.js
.github/: dependabot.yml
.github/workflows/: deploy.yml  docs.yml
core/: urls.py  views.py
docs/: README.md  requirements.txt
docs/docs/: index.md
docs/javascript/: readthedocs.js
esystem/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
esystem/migrations/: 0001_initial.py  0002_alter_hazardouswastesystem_name.py  0003_alter_hazardouswastesystem_data_plus_image_manifest_and_more.py
esystem/tests/: test_foo.py
hazsystems/: asgi.py  settings.py  urls.py  wsgi.py
interprop/: asgi.py  settings.py  urls.py  wsgi.py
static/src/css/: style.css
static/src/js/: hello.js
templates/: base.html
templates/core/: index.html
templates/esystem/: hazardouswastesystem_detail.html  hazardouswastesystem_form.html  hazardouswastesystem_list.html
templates/waste/: waste_list.html
waste/: admin.py  models.py  urls.py  views.py
waste/migrations/: 0001_initial.py  0002_wastetag.py  0003_remove_wastetag_waste_wastetag_waste.py
