[project]
name = "hazsystems"
version = "0.0.2"
description = "A practice django application."
readme = "README.md"
authors = [
    { name = "David Graham", email = "dpgraham4401@gmail.com" },
]
maintainers = [
    { name = "David Graham", email = "dpgraham4401@gmail.com" },
]
classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3",
]

license = { text = "MIT" }
requires-python = ">=3.12"

dependencies = [
    "openpyxl==3.1.5",
    "django-filter==24.3",
    "django-crispy-forms==2.3",
    "numpy==2.0.2",
    "jira==3.8.0",
    "plotly==5.24.1",
    "django-admin-shell==2.0.1",
    "nh3==0.2.18",
    "tinycss2==1.3.0",
    "rapidfuzz==3.10.0",
    "django-csp==3.8",
    "django-maintenance-mode==0.21.1",
    "elasticsearch==7.13.4",
    "django-htmx==1.19.0",
    "wagtail==6.2.2",
    "django-auditlog==3.0.0",
    "sentry-sdk[django]==2.17.0",
    "django-pydantic-field==0.3.10",
    "httpx>=0.27.2",
]

[dependency-groups]
lint = [
    "ruff==0.7.1",
    "djhtml==3.0.7"
]
test = [
    "model-bakery==1.20.0",
    "playwright==1.47.0",
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-base-url==2.1.0",
    "pytest-django==4.9.0",
    "pytest-playwright==0.5.2",
    "pytest-recording==0.13.2",
    "pytest-rerunfailures==14.0",
    "pytest-cov==6.0.0",
    "vcrpy==6.0.2",
    "openapi-spec-validator==0.7.1",
    "coverage==7.6.3",
    "pytest-env==1.1.5"
]
dev = [
    "django-debug-toolbar==4.4.6",
    "django-browser-reload==1.16.0",
    "django-silk==5.2.0",
    "setuptools-scm==8.1.0",
    "pre-commit>=4.0.1",
    { include-group = "lint" },
    { include-group = "test" },
]

[tool.ruff.lint]
select = ["F", "E", "W", "Q", "I001"]
ignore = ["F401"]
exclude = ["**/migrations/*.py"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "haztrak.settings.test"
