[project]
name = "hazsystems"
version = "0.0.2"
description = "A practice django application."
readme = "README.md"
authors = [
    { name = "David Graham", email = "dpgraham4401@gmail.com" },
]
maintainers = [
    { name = "David Graham", email = "dpgraham4401@gmail.com" },
]
classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3",
]

license = { text = "MIT" }
requires-python = ">=3.12"

dependencies = [
    "granian==1.6.1",
    "django==5.1.2",
    "psycopg[binary,pool]==3.2.3",
    "oracledb==2.4.1",
    "django-storages[s3]==1.14.4",
    "django-ratelimit==4.1.0",
    "django-environ==0.11.2",
    "django-ninja==1.3.0",
    "redis[hiredis]==5.1.1",
    "boto3<2.0.0,>=1.35.36",
    "dramatiq[redis]==1.17.1",
    "django-dramatiq==0.11.6",
    "dramatiq-abort==1.2.0",
    "APScheduler==3.10.4",
    "django-apscheduler==0.7.0",
    "pydantic==2.9.2",
    "whitenoise[brotli]==6.7.0",
    "mozilla-django-oidc==4.0.1",
    "requests==2.32.2",
    "pandas[pyarrow]==2.2.3",
    "openpyxl==3.1.5",
    "django-filter==24.3",
    "django-crispy-forms==2.3",
    "numpy==2.0.2",
    "jira==3.8.0",
    "plotly==5.24.1",
    "django-admin-shell==2.0.1",
    "nh3==0.2.18",
    "tinycss2==1.3.0",
    "rapidfuzz==3.10.0",
    "django-csp==3.8",
    "django-maintenance-mode==0.21.1",
    "elasticsearch==7.13.4",
    "django-htmx==1.19.0",
    "wagtail==6.2.2",
    "django-auditlog==3.0.0",
    "sentry-sdk[django]==2.17.0",
    "django-pydantic-field==0.3.10",
    "httpx>=0.27.2",
]


[tool.ruff.lint]
select = ["F", "E", "W", "Q", "I001"]
ignore = ["F401"]
exclude = ["**/migrations/*.py"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "haztrak.settings.test"
